📝 Update description and title

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Laith Shono. App developer based in Riyadh">
+  <meta name="description" content="Laith Shono. A software developer based in Riyadh, Saudi Arabia 🇸🇦.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -29,7 +29,7 @@
 
   <meta name="theme-color" content="#050505">
 
-  <title>Laith Shono</title>
+  <title>Laith Shono: Software Developer</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
