✨ Add HTML tag for Google Search Console

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,9 @@
 
   <title>Laith Shono: Software Developer</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- For Google Search Console -->
+  <meta name="google-site-verification" content="KXPnmgKRjzfbI9OFVVlN0H0gk2RCaeVMtoy1ocYtyKU" />
 </head>
 
 <body>
